[package]
name = "gomoku"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
chrono = "0.4.42"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"


[dependencies.web-sys]
version = "0.3"
features = [
    "Window","Document","Element",
    "HtmlCanvasElement","CanvasRenderingContext2d",
    "KeyboardEvent","PointerEvent","WheelEvent","DomRect",
    "EventTarget","Performance"
]
build = "build.rs"


[dependencies.console_error_panic_hook]
version = "0.1"
optional = true
